--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "test": "node test.js"
   },
   "dependencies": {
-    "rimraf": "^2.6.2",
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "mkdirp": "^0.5.1",
+    "rimraf": "^2.6.2"
   },
   "devDependencies": {
     "request": "^2.81.0",
