--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dry-di": "^0.5.9",
     "html5-fs": "^0.1.1",
     "isomorphic-fetch": "^2.2.1",
-    "jszip": "^3.1.5"
+    "jszip": "^3.1.5",
+    "localforage": "^1.5.0"
   },
   "devDependencies": {
     "babel-plugin-import-glob": "^2.0.0",
