--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "mkdirp": "^0.5.1",
+    "recursive-copy": "^2.0.8",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
