--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "gulp test"
   },
   "dependencies": {
+    "avrgirl-arduino": "^2.2.7",
     "cordova": "^8.0.0",
     "dry-di": "^0.5.9",
+    "electron-rebuild": "^1.7.3",
     "html5-fs": "^0.1.1",
     "isomorphic-fetch": "^2.2.1",
     "jszip": "^3.1.5",
