--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cordova": "^8.0.0",
     "dry-di": "^0.5.9",
     "electron": "^1.7.11",
+    "electron-builder": "^19.55.2",
     "electron-rebuild": "^1.7.3",
     "html5-fs": "^0.1.1",
     "isomorphic-fetch": "^2.2.1",
