don't try to flash Bluetooth devices

--- a/res/package.json
+++ b/res/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "ProjectABE",
-  "version": "0.6.8",
-  "license": "MIT",
-  "main": "electron.js"
+    "name":"ProjectABE",
+    "main":"index.html"
 }
