--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "html5-fs": "^0.1.1",
     "isomorphic-fetch": "^2.2.1",
     "jszip": "^3.1.5",
-    "localforage": "^1.5.0"
+    "localforage": "^1.5.0",
+    "minimist": "^1.2.0"
   },
   "devDependencies": {
     "asar": "^0.14.0",
