--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "isomorphic-fetch": "^2.2.1",
     "jszip": "^3.1.5",
     "localforage": "^1.5.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "natives": "^1.1.6"
   },
   "devDependencies": {
     "asar": "^0.14.0",
